<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jl.jlapp.mvp.activity.MyOrderListActivity"
    android:id="@+id/my_order_list_page"
    >

    <RelativeLayout
        android:id="@+id/classify_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/trans_30px">

        <ImageView
            android:id="@+id/order_list_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/trans_10px"
            android:src="@drawable/shoplist_return"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_order"
            android:layout_centerInParent="true"
            android:textSize="@dimen/text_trans_35px"
            android:textColor="@color/trans_333333"
            />
        <ImageView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/icon_message_green_l"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/cutOffrule"
        />
    <RadioGroup
        android:id="@+id/my_order_state_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/trans_30px"
        android:background="@color/white"
        >
        <RadioButton
            android:id="@+id/my_order_state_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/all"
            android:gravity="center"
            android:textColor="@color/shop_order_check"
            android:textSize="@dimen/text_trans_27px"
            android:drawableBottom="@drawable/checkeed_line"
            android:drawablePadding="@dimen/trans_30px"
            />
        <RadioButton
            android:id="@+id/my_order_state_for_the_payment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/for_the_payment"
            android:gravity="center"
            android:textColor="@color/shop_order_check"
            android:textSize="@dimen/text_trans_27px"
            android:drawablePadding="@dimen/trans_30px"
            />
        <RadioButton
            android:id="@+id/my_order_state_for_the_goods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/for_the_goods"
            android:gravity="center"
            android:textColor="@color/shop_order_check"
            android:textSize="@dimen/text_trans_27px"
            android:drawablePadding="@dimen/trans_30px"
            />
        <RadioButton
            android:id="@+id/my_order_state_has_been_completed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/has_been_completed"
            android:gravity="center"
            android:textColor="@color/shop_order_check"
            android:textSize="@dimen/text_trans_27px"
            android:drawablePadding="@dimen/trans_30px"
            />
        <RadioButton
            android:id="@+id/my_order_state_in_the_after_sale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/in_the_after_sale"
            android:gravity="center"
            android:textColor="@color/shop_order_check"
            android:textSize="@dimen/text_trans_27px"
            android:drawablePadding="@dimen/trans_30px"
            />
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/cutOffrule"
        />

    <FrameLayout
        android:id="@+id/my_order_list_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </FrameLayout>

</LinearLayout>
